<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_character"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_cat_cute" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        tools:ignore="Suspicious0dp">

        <ImageButton
            android:id="@+id/btnStatus"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_circle" />

        <TextView
            android:id="@+id/tv_alive_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/alive_animal"
            android:textColor="@color/white" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/location"
        android:textColor="@color/open_gray" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/eath"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/first_seen_in"
        android:textColor="@color/open_gray" />

    <TextView
        android:id="@+id/tv_first_seen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/edge_of_tomorty_rick"
        android:textColor="@color/white" />

</LinearLayout>